--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Solus-LGPD/quiz-lgpd-api#readme",
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.7",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "express": "^4.18.2",
@@ -29,6 +30,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "zod": "^3.19.1"
   }
 }
