--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "cors": "^2.8.5",
     "zod": "^3.19.1"
   }
