--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "zod": "^3.19.1"
   }
