--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "dependencies": {
     "@prisma/client": "^4.5.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
     "zod": "^3.19.1"
   }
 }
